--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.2.0",
+    "@stitches/react": "^1.2.8",
+    "dotenv": "^16.3.1",
+    "faunadb": "^4.8.0",
+    "next": "14.0.1",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.1"
+    "react-dom": "^18"
   }
 }
