--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ AUTH0_BASE_URL= 'http://localhost:3000'
 AUTH0_ISSUER_BASE_URL= 'https://dev-xw6q521ajkpru2wj.us.auth0.com'
 AUTH0_CLIENT_ID=YvJPvF9hSPsbsiuJfsNG9lVRMZxd57g2
 AUTH0_CLIENT_SECRET=Yat_byW0XkYR9z4xWCundm3V_vWrgza2jzZt3Mf6L1FxKy5bTShRriUEiolSG40S
+GOOGLE_CLIENT_ID=759422105899-1k2vemtkjgmc74aodvf7rqj3j3doe9ao.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET =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
+SECRET = 79844b61bed744809d9bc68d087b52a6
