--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.17",
     "@stitches/react": "^1.2.8",
+    "axios": "^1.6.1",
     "dotenv": "^16.3.1",
     "faunadb": "^4.8.0",
     "next": "14.0.1",
