--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@mui/material": "^5.14.17",
     "@stitches/react": "^1.2.8",
     "axios": "^1.6.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "faunadb": "^4.8.0",
+    "googleapis": "^128.0.0",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
+    "next-connect": "^1.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0"
