--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.17",
+    "@newfrontdoor/init-middleware": "^0.2.0",
     "@stitches/react": "^1.2.8",
     "axios": "^1.6.1",
     "cors": "^2.8.5",
