--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-connect": "^1.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-drive-picker": "^1.2.2",
     "react-icons": "^4.11.0"
   }
 }
