--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ AUTH0_CLIENT_SECRET=Yat_byW0XkYR9z4xWCundm3V_vWrgza2jzZt3Mf6L1FxKy5bTShRriUEiolS
 GOOGLE_CLIENT_ID=759422105899-1k2vemtkjgmc74aodvf7rqj3j3doe9ao.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET =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
 SECRET = 79844b61bed744809d9bc68d087b52a6
+NEXT_PUBLIC_API_URL=http://localhost:3000
+API_URL=http://localhost:3000
