--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "react-dom": "^18",
     "react-google-drive-picker": "^1.2.2",
     "react-icons": "^4.11.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.9.0"
   }
 }
