--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "faunadb": "^4.8.0",
+    "google-auth-library": "^9.2.0",
     "googleapis": "^128.0.0",
-    "next": "14.0.1",
+    "next": "^14.0.1",
     "next-auth": "^4.24.4",
     "next-connect": "^1.0.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-drive-picker": "^1.2.2",
     "react-icons": "^4.11.0"
   },
