--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-drive-picker": "^1.2.2",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.12.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20.9.0"
+    "@types/node": "^20.9.0",
+    "typescript": "5.2.2"
   }
 }
