--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "faunadb": "^4.8.0",
+    "framer-motion": "^10.16.5",
     "google-auth-library": "^9.2.0",
     "googleapis": "^128.0.0",
     "next": "^14.0.1",
@@ -30,6 +31,7 @@
     "react-icons": "^4.12.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.5",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
