--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth0/nextjs-auth0": "^3.2.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.17",
     "@newfrontdoor/init-middleware": "^0.2.0",
     "@stitches/react": "^1.2.8",
@@ -26,6 +27,7 @@
     "next-auth": "^4.24.4",
     "next-connect": "^1.0.0",
     "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-google-drive-picker": "^1.2.2",
     "react-icons": "^4.12.0",
