feat user routes

--- a/.env
+++ b/.env
@@ -9,4 +9,6 @@ GOOGLE_CLIENT_ID=759422105899-1k2vemtkjgmc74aodvf7rqj3j3doe9ao.apps.googleuserco
 GOOGLE_CLIENT_SECRET =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
 SECRET = 79844b61bed744809d9bc68d087b52a6
 NEXT_PUBLIC_API_URL=http://localhost:3000
-API_URL=http://localhost:3000
+API_URL=http://localhost:3000/api
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=huehueheuheheueu
