--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "faunadb": "^4.8.0",
+    "firebase": "^10.7.0",
     "framer-motion": "^10.16.5",
     "google-auth-library": "^9.2.0",
     "googleapis": "^128.0.0",
+    "multer": "^1.4.5-lts.1",
     "next": "^14.0.1",
     "next-auth": "^4.24.4",
     "next-connect": "^1.0.0",
