--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.1",
     "swiper": "^11.0.5",
     "uuid": "^9.0.1"
   },
