--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^10.16.5",
     "google-auth-library": "^9.2.0",
     "googleapis": "^128.0.0",
+    "keen-slider": "^6.8.6",
     "multer": "^1.4.5-lts.1",
     "next": "^14.0.1",
     "next-auth": "^4.24.4",
