--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.2.0",
     "react-google-drive-picker": "^1.2.2",
     "react-icons": "^4.12.0",
+    "react-player": "^2.14.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
